--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,12 @@ body{
 
 .card{
   padding: 20px;
+  width: 175ox;
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  border-radius: 10px;
 }
 
 .card--star{
@@ -59,3 +65,27 @@ body{
   font-weight: bold;
 }
 
+/* card--container{
+  display: flex;
+  flex-direction: row;
+} */
+
+
+  .card--list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow-x: auto;
+}
+
+
+.card--badge{
+  position: absolute;
+  top: 22px;
+  left: 25px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 5px;
+  font-weight: bold;
+
+}
